--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,3 +23,7 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
+      # Execute all unit tests in the solution
+    - name: Execute unit tests
+      run: dotnet test
