--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,5 +43,5 @@ jobs:
           email: "sara_maroum@hotmail.com" # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
           app_name: "reservapp936" # you aplication name
-          dockerfile_path: 'lstat /home/runner/work/ReservationApp_ASP.netCoreMVC/ReservationApp_ASP.netCoreMVC/Dockerfile' # set the path to the folder where the Dockerfile is located
+          dockerfile_path: 'Dockerfile' # set the path to the folder where the Dockerfile is located
 
