--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,7 @@ jobs:
        
     - name: Deploy Docker image on Heroku
       id: heroku
-      uses: uses:jctaveras/heroku-deploy@v2.1.2 # use the latest version of the action
+      uses: jctaveras/heroku-deploy@v2.1.2 # use the latest version of the action
       with:
           email: "sara_maroum@hotmail.com" # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
