--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,5 +51,5 @@ jobs:
       #with:
        #   email: "sara_maroum@hotmail.com" # your heroku email
         #  api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
-         # app_name: "reservapp936" # you aplication name
+         ## app_name: "reservapp936" # you aplication name
 
